--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -70,7 +70,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-अस्तीति ॥ उत्तरस्यां दिशि । अनेनास्य देवभूमित्वं सूच्यते । देवतात्माधिष्ठाता यस्य सः । एतेनास्य वक्ष्यमाणमेनकापरिणयपार्वतीजननादिचेतनव्यवहारयोग्यत्वसिध्दि ।हिमस्यालयः स्थानमिति हिमालयो नाम =हिमालय इति प्रसिध्दः। अधिको राजाधिराजः । 'राजाहःसखिभ्यष्टच्' । न गच्छन्तीति नगा अचलास्तेषामधिराजो मगाधिराजोऽस्ति । कथंभूतः । पुर्वापरौ =प्राच्यपश्चिमौतीयनिधी =समुद्रौ वगाह्य =प्रविश्य । अतएव पृथिव्या भुपेर्मानं =हस्तादिना परिच्छेदः । भावे ल्युट् ।तस्य दण्डः । यव्दा मीयतेऽनेनेति मानम् । करणे ल्युट् । स चासौ दण्डश्च स इव स्थितः । आयामपरिच्छेदकदण्ड इव स्थित इत्यर्थः । पूर्वापरसागरावगाहित्वं चास्य हिमालयस्यास्त्येव । उक्तं च ब्रह्माण्डपुराणे - 'कैला सो हिमवांश्चैव दक्षिणे वर्षवर्वतौ । पूर्वपश्चिमगावेदावर्णवातरुपस्थितौ ॥ ' अत्र हिमाचलस्योभयाब्धिव्याप्तसाम्यान्मानदण्डत्वेनोत्प्रेक्षणादुत्प्रेक्षाऽलंकारः । 'प्रकृतेऽप्रकृतगुणक्रियादिसम्बन्धादप्रकृतत्वेन प्रकृतस्य संभावनमुत्प्रेक्षा'इत्यलंकारसर्वस्वकारः । अस्मिन्सर्गे प्रामेण वृत्तमुपजातिः। क्वचिदिन्द्रवज्रोपेन्द्रवज्रे च । तल्लक्षणं तु - 'स्यादिन्द्रवज्रा यदि तौ जगौ गः'। 'उतेन्द्रवज्राजतजास्ततो गौ'। अनन्तरोदीरितलक्ष्मभाजौ पादौ यदीयावुपजातयस्ताः ॥ इति ॥ 1. 1 ॥
+अस्तीति ॥ उत्तरस्यां दिशि । अनेनास्य देवभूमित्वं सूच्यते । देवतात्माधिष्ठाता यस्य सः । एतेनास्य वक्ष्यमाणमेनकापरिणयपार्वतीजननादिचेतनव्यवहारयोग्यत्वसिध्दि ।हिमस्यालयः स्थानमिति हिमालयो नाम =हिमालय इति प्रसिध्दः। अधिको राजाधिराजः । 'राजाहःसखिभ्यष्टच्' । न गच्छन्तीति नगा अचलास्तेषामधिराजो मगाधिराजोऽस्ति । कथंभूतः । पुर्वापरौ =प्राच्यपश्चिमौतीयनिधी =समुद्रौ वगाह्य =प्रविश्य । अतएव पृथिव्या भुपेर्मानं =हस्तादिना परिच्छेदः । भावे ल्युट् ।तस्य दण्डः । यद्वा मीयतेऽनेनेति मानम् । करणे ल्युट् । स चासौ दण्डश्च स इव स्थितः । आयामपरिच्छेदकदण्ड इव स्थित इत्यर्थः । पूर्वापरसागरावगाहित्वं चास्य हिमालयस्यास्त्येव । उक्तं च ब्रह्माण्डपुराणे - 'कैला सो हिमवांश्चैव दक्षिणे वर्षवर्वतौ । पूर्वपश्चिमगावेदावर्णवातरुपस्थितौ ॥ ' अत्र हिमाचलस्योभयाब्धिव्याप्तसाम्यान्मानदण्डत्वेनोत्प्रेक्षणादुत्प्रेक्षाऽलंकारः । 'प्रकृतेऽप्रकृतगुणक्रियादिसम्बन्धादप्रकृतत्वेन प्रकृतस्य संभावनमुत्प्रेक्षा'इत्यलंकारसर्वस्वकारः । अस्मिन्सर्गे प्रामेण वृत्तमुपजातिः। क्वचिदिन्द्रवज्रोपेन्द्रवज्रे च । तल्लक्षणं तु - 'स्यादिन्द्रवज्रा यदि तौ जगौ गः'। 'उतेन्द्रवज्राजतजास्ततो गौ'। अनन्तरोदीरितलक्ष्मभाजौ पादौ यदीयावुपजातयस्ताः ॥ इति ॥ 1. 1 ॥
 
 इतः परं षोडशभिः श्लोकैर्हिमाद्रि वर्णयति । तत्र नगाधिराजत्वं निर्वाढमाह-
 </details>
@@ -98,7 +98,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-यमिति ॥ सर्वे च ते शैलाश्च सर्वशैलाः । 'पूर्वकालैकसर्वजरत्पुराणनवकेवलाः समानाधिकरणेन' इति समासः । यं हिमालयं वत्सं परिकल्प्य विधाय दोरदक्षे दोहनसमर्थे मेरौ दोग्धरि स्थिते सति । 'यस्य च भावेन भावलक्षणम्' इति सत्पमो । पृथूपदिष्टां पृथुना वैन्येनोपदिष्टामीदृक्तया प्रदर्शितां धरित्रीम् । गोरुपधरामिति शेषः ।'गौर्भूत्वा तु वसुन्धरा' इति विष्णुपुराणात् । 'अकथितं च' इति कर्मत्वम् । भास्वन्ति च भास्वत्त्यश्च भास्वन्ति द्युतिमन्ति । ओषधिविशेषणं वैतत् । 'नपुंसकमनपुंसकेन-' इत्यादिना नपुंसकैकशेषः । रत्नानि मणीञ्जातिश्रेष्ठवस्तूनि च । 'रत्नं श्रेष्ठे मणावपि' इति विश्वः । 'जातौ जातौ यदुत्कृष्टं तद्रत्नमिति कथ्यते' इति यादवः । महौषधीश्च संजीवनीप्रभृतीश्च क्षीरत्वेन परिणता इति शेषः । 'ताः क्षीरपरिणामिनीः' इति विष्णुपुराणात् । दुदुहुः । 'दुहियाच -' इत्यादिना व्दिकर्मकत्वम् । अत्र प्रयोजकत्वेऽपि शैलानां 'पञ्चभिर्हलैः कर्षति ग्रामं ग्रामणीः' इतिवत्तत्समर्थाचरणात्कर्तृत्वेन व्यपदेशः । दुहेः स्वरितेत्त्वेऽप्यकर्त्रभिप्रायविवक्षायां परस्मैपदम् । अत्रार्थे प्रमाणम्- गौर्भूमिरचलाः सर्वे कर्तारोऽत्र पयांसि च । ओषध्यश्चैव भास्वन्ति रत्नानि विविधानि च ॥ वत्सश्च हिमवानासीद्दोग्धा मेरुर्महागिरिः ॥ ' इति । एतेन वत्सस्य मातुः प्रेमास्पदत्वादस्य सारग्राहित्वं गम्यते । तथा चास्य नगस्य रत्नबिशेषभोक्तृत्वान्नगाधिराजत्वं युक्तमिति भावः । अत्र हिमवव्दर्णनस्य प्रकृतत्वात्तद्गतौषधिरत्नानां व्दयानामपि प्रकृतत्त्वात्तेषां दोहनक्रियारुपसमानधर्मसंवन्धादौपम्यस्य गम्यत्वात्केवलप्राकरणिकविषयस्तुल्ययोगिता नामालंकारः । तदुक्तम् - 'प्रस्तुतानां तथान्येषां केवलं तुल्यधर्मतः । औपम्यं गम्यते यत्र सा मता तुल्ययोगिता ॥ ' न चात्र रुपकपरिणामाद्यलंकारशङ्का कार्या तेषामारोपहेतुत्वात् । हिमहेमाचलादिषु वत्सत्वदोग्धृत्वादीनामागमसिध्दत्वेनानारोप्यमाणत्वादिति ॥ 1. 2 ॥
+यमिति ॥ सर्वे च ते शैलाश्च सर्वशैलाः । 'पूर्वकालैकसर्वजरत्पुराणनवकेवलाः समानाधिकरणेन' इति समासः । यं हिमालयं वत्सं परिकल्प्य विधाय दोरदक्षे दोहनसमर्थे मेरौ दोग्धरि स्थिते सति । 'यस्य च भावेन भावलक्षणम्' इति सत्पमो । पृथूपदिष्टां पृथुना वैन्येनोपदिष्टामीदृक्तया प्रदर्शितां धरित्रीम् । गोरुपधरामिति शेषः ।'गौर्भूत्वा तु वसुन्धरा' इति विष्णुपुराणात् । 'अकथितं च' इति कर्मत्वम् । भास्वन्ति च भास्वत्त्यश्च भास्वन्ति द्युतिमन्ति । ओषधिविशेषणं वैतत् । 'नपुंसकमनपुंसकेन-' इत्यादिना नपुंसकैकशेषः । रत्नानि मणीञ्जातिश्रेष्ठवस्तूनि च । 'रत्नं श्रेष्ठे मणावपि' इति विश्वः । 'जातौ जातौ यदुत्कृष्टं तद्रत्नमिति कथ्यते' इति यादवः । महौषधीश्च संजीवनीप्रभृतीश्च क्षीरत्वेन परिणता इति शेषः । 'ताः क्षीरपरिणामिनीः' इति विष्णुपुराणात् । दुदुहुः । 'दुहियाच -' इत्यादिना द्विकर्मकत्वम् । अत्र प्रयोजकत्वेऽपि शैलानां 'पञ्चभिर्हलैः कर्षति ग्रामं ग्रामणीः' इतिवत्तत्समर्थाचरणात्कर्तृत्वेन व्यपदेशः । दुहेः स्वरितेत्त्वेऽप्यकर्त्रभिप्रायविवक्षायां परस्मैपदम् । अत्रार्थे प्रमाणम्- गौर्भूमिरचलाः सर्वे कर्तारोऽत्र पयांसि च । ओषध्यश्चैव भास्वन्ति रत्नानि विविधानि च ॥ वत्सश्च हिमवानासीद्दोग्धा मेरुर्महागिरिः ॥ ' इति । एतेन वत्सस्य मातुः प्रेमास्पदत्वादस्य सारग्राहित्वं गम्यते । तथा चास्य नगस्य रत्नबिशेषभोक्तृत्वान्नगाधिराजत्वं युक्तमिति भावः । अत्र हिमवद्वर्णनस्य प्रकृतत्वात्तद्गतौषधिरत्नानां द्वयानामपि प्रकृतत्त्वात्तेषां दोहनक्रियारुपसमानधर्मसंवन्धादौपम्यस्य गम्यत्वात्केवलप्राकरणिकविषयस्तुल्ययोगिता नामालंकारः । तदुक्तम् - 'प्रस्तुतानां तथान्येषां केवलं तुल्यधर्मतः । औपम्यं गम्यते यत्र सा मता तुल्ययोगिता ॥ ' न चात्र रुपकपरिणामाद्यलंकारशङ्का कार्या तेषामारोपहेतुत्वात् । हिमहेमाचलादिषु वत्सत्वदोग्धृत्वादीनामागमसिध्दत्वेनानारोप्यमाणत्वादिति ॥ 1. 2 ॥
 
 ननु हिमदोषदूषितस्य तस्यात्यन्तमनभिगम्यत्वाच्छि्वत्रिण इव सर्वमपि सौभाग्यं विफलमित्याशङ्क्याह -
 </details>
@@ -125,7 +125,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-अनन्तेति ॥ प्रभवत्यस्मादिति प्रभवः कारणम् । अनन्तानामपरिमितानां रत्नानां श्रेष्ठवस्तूनां प्रभवस्य यस्य हिमाद्रेर्हिमम् । कर्तृ । सुभगस्य भावः सौभाग्यम्स । 'हद्भगसिन्ध्वन्ते पूर्वपदस्य च ' हत्युभयपदवृध्दिः । तव्दिलुम्पतीति सौभाग्यविलोपि सौन्दर्यविधातकं न जातं नाभूत् । तथाहि । एको दोषो गुणसंनिपात इन्दोः किरणेष्वङ्क इव निमज्जति । अन्तर्लियत इत्यर्थः । नहि स्वल्पो दोषोऽमितगुणाभिभावक एव किंतु कश्चिदिन्दुकलङ्कादिवद्गुणैरभिभूयते । अन्यथा सर्वरम्यवस्तुहानिप्रसङ्गादिति भावः । अत्रोपमानुप्राणितोऽर्थान्तरन्यासालंकारः । तल्लक्षणं तु-'ज्ञेयः सोऽर्यान्तरन्चासो वस्तु प्रस्तुत्य किंचन । तत्साधनसमर्थस्य न्यासो योऽन्यस्य वस्तुनः ॥ ' इति दण्डी ॥ 1. 3 ॥    
+अनन्तेति ॥ प्रभवत्यस्मादिति प्रभवः कारणम् । अनन्तानामपरिमितानां रत्नानां श्रेष्ठवस्तूनां प्रभवस्य यस्य हिमाद्रेर्हिमम् । कर्तृ । सुभगस्य भावः सौभाग्यम्स । 'हद्भगसिन्ध्वन्ते पूर्वपदस्य च ' हत्युभयपदवृध्दिः । तद्विलुम्पतीति सौभाग्यविलोपि सौन्दर्यविधातकं न जातं नाभूत् । तथाहि । एको दोषो गुणसंनिपात इन्दोः किरणेष्वङ्क इव निमज्जति । अन्तर्लियत इत्यर्थः । नहि स्वल्पो दोषोऽमितगुणाभिभावक एव किंतु कश्चिदिन्दुकलङ्कादिवद्गुणैरभिभूयते । अन्यथा सर्वरम्यवस्तुहानिप्रसङ्गादिति भावः । अत्रोपमानुप्राणितोऽर्थान्तरन्यासालंकारः । तल्लक्षणं तु-'ज्ञेयः सोऽर्यान्तरन्चासो वस्तु प्रस्तुत्य किंचन । तत्साधनसमर्थस्य न्यासो योऽन्यस्य वस्तुनः ॥ ' इति दण्डी ॥ 1. 3 ॥    
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -151,7 +151,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-यश्चेति । किंचेति चकारार्थः । यो हिमाद्रिरप्सरसां विभ्रममण्डनानि विलासालंकरणानि । अथवा विभ्रमो विपरीतन्यासः । विभ्रमस्त्वरयाकाले भूषास्थानविपर्यये' इति दशरुपकात् । तेन मण्डनानि तेषां संपादयित्रीम् । एतध्दातुरागदर्शिन्योऽप्सरसः संध्याभ्रमेण प्रसाधनाय त्वरयन्त इति भावः । तथात्वे भ्रान्तिमदलंकारो व्यज्यते । 'कर्तृकर्मणोः कृति' इति कर्मणि षष्ठि । वारीणां वाहका बलाहकाः पृषोदरादित्वात्साधुः । तेषां छेदेषु खण्डेषु विभक्तः संक्रमितो रागो यया ताम् । एतेनाद्रेरभ्रंकषत्वं गम्यते । इदं विशेषणव्दयं संध्यायामपि योज्यम् । धातवः सिन्दूरगैरिकादयोऽस्य सन्तीति धातुमान् । नित्ययोगे मतुप् । तस्य भावो धातुमत्ता ताम् । धातुयोगित्वमिति संबन्धोऽपि वाच्यार्थः । 'समासकृत्तध्दितेषु संबन्धाभिधानं भावप्रत्ययेन ' इति वचनात् । लक्षणया नित्यानुषङ्गिकधातुमित्यर्थः । अकालसंध्यामिवानियतकालप्रात्पसेव्यामिव शिखरैर्बिभर्ति धत्ते । अत्र संध्याशब्दस्य जातिवाचित्वाज्जात्युत्प्रेक्षा ॥ 1.4 ॥
+यश्चेति । किंचेति चकारार्थः । यो हिमाद्रिरप्सरसां विभ्रममण्डनानि विलासालंकरणानि । अथवा विभ्रमो विपरीतन्यासः । विभ्रमस्त्वरयाकाले भूषास्थानविपर्यये' इति दशरुपकात् । तेन मण्डनानि तेषां संपादयित्रीम् । एतध्दातुरागदर्शिन्योऽप्सरसः संध्याभ्रमेण प्रसाधनाय त्वरयन्त इति भावः । तथात्वे भ्रान्तिमदलंकारो व्यज्यते । 'कर्तृकर्मणोः कृति' इति कर्मणि षष्ठि । वारीणां वाहका बलाहकाः पृषोदरादित्वात्साधुः । तेषां छेदेषु खण्डेषु विभक्तः संक्रमितो रागो यया ताम् । एतेनाद्रेरभ्रंकषत्वं गम्यते । इदं विशेषणद्वयं संध्यायामपि योज्यम् । धातवः सिन्दूरगैरिकादयोऽस्य सन्तीति धातुमान् । नित्ययोगे मतुप् । तस्य भावो धातुमत्ता ताम् । धातुयोगित्वमिति संबन्धोऽपि वाच्यार्थः । 'समासकृत्तध्दितेषु संबन्धाभिधानं भावप्रत्ययेन ' इति वचनात् । लक्षणया नित्यानुषङ्गिकधातुमित्यर्थः । अकालसंध्यामिवानियतकालप्रात्पसेव्यामिव शिखरैर्बिभर्ति धत्ते । अत्र संध्याशब्दस्य जातिवाचित्वाज्जात्युत्प्रेक्षा ॥ 1.4 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -165,17 +165,17 @@ title = "०१"
 <details><summary>मूलम्</summary>
 
 आमेखलं सञ्चरतां घनानां छायामधः सानुगतां निषेव्य ।  
-उव्देजिता वृष्टिभिराश्रयन्ते श्रृङ्गाणि यस्यातपवन्ति सिध्दाः ॥ 1. 5 ॥  
+उद्वेजिता वृष्टिभिराश्रयन्ते श्रृङ्गाणि यस्यातपवन्ति सिध्दाः ॥ 1. 5 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-सिध्दा आमेखलं सञ्चरतां धनानाम् अधः सानुगतां छायां निषेव्य वृष्टिभिः उव्देजिताः (सन्तः)यस्य आतपवन्ति श्रृङ्गाणि आश्रयन्ते ।  
+सिध्दा आमेखलं सञ्चरतां धनानाम् अधः सानुगतां छायां निषेव्य वृष्टिभिः उद्वेजिताः (सन्तः)यस्य आतपवन्ति श्रृङ्गाणि आश्रयन्ते ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-आमेखलमिति ॥ सिध्दा अणिमादिसिध्दा देवयोनिविशेषाश्च । 'पिशाचो गुह्यकः सिध्दो भूतोऽमी देवयोनयः'। इत्यमरः । आमेखलाभ्य आमेखलं नितम्बपर्यन्तम् । 'मेखला खण्डबन्धे स्यात्काञ्चौशैलनितम्बयोः' इति विश्वः । 'आङ्मर्यादाभिविध्योः' इत्यव्ययीभावः । संचरतां धनानां मेधानामधः सानूनि मेधमण्डलादवस्तटानि गतां प्रात्पाम् । 'व्दितीया श्रितातोतपतितगतात्यस्तप्रात्पापन्तैः' इति समासः । छायामनातपम् । 'छाया सूर्यप्रिया कान्तिः प्रतिबिम्बमनातपः'। इत्यमरः । निषेव्यवृष्टिभिरुव्देजिताः = क्लेशिताः सन्तः । 'उव्देगस्तिमिते क्लेशे भये मन्थरगामिनि' इति शर्ब्दाणवः । यस्य हिमाद्रेरातपवन्ति सातपानि श्रृङ्गाष्याश्रयन्ते । आश्रित्य स्थिता इत्यर्थः । अतिमेघमण्डलमस्यौन्नत्यमिति भावः ।
+आमेखलमिति ॥ सिध्दा अणिमादिसिध्दा देवयोनिविशेषाश्च । 'पिशाचो गुह्यकः सिध्दो भूतोऽमी देवयोनयः'। इत्यमरः । आमेखलाभ्य आमेखलं नितम्बपर्यन्तम् । 'मेखला खण्डबन्धे स्यात्काञ्चौशैलनितम्बयोः' इति विश्वः । 'आङ्मर्यादाभिविध्योः' इत्यव्ययीभावः । संचरतां धनानां मेधानामधः सानूनि मेधमण्डलादवस्तटानि गतां प्रात्पाम् । 'द्वितीया श्रितातोतपतितगतात्यस्तप्रात्पापन्तैः' इति समासः । छायामनातपम् । 'छाया सूर्यप्रिया कान्तिः प्रतिबिम्बमनातपः'। इत्यमरः । निषेव्यवृष्टिभिरुद्वेजिताः = क्लेशिताः सन्तः । 'उद्वेगस्तिमिते क्लेशे भये मन्थरगामिनि' इति शर्ब्दाणवः । यस्य हिमाद्रेरातपवन्ति सातपानि श्रृङ्गाष्याश्रयन्ते । आश्रित्य स्थिता इत्यर्थः । अतिमेघमण्डलमस्यौन्नत्यमिति भावः ।
 </details>
 
 
@@ -190,18 +190,18 @@ title = "०१"
 
 <details><summary>मूलम्</summary>
 
-पदं तुषारस्त्रुतिधैतरक्तं यस्मिन्नदृष्ट्वापि हतव्दिपानाम् ।  
+पदं तुषारस्त्रुतिधैतरक्तं यस्मिन्नदृष्ट्वापि हतद्विपानाम् ।  
 विदन्ति मार्गं नखरन्ध्रमुक्तैर्मुक्ताफलैः केसरिणां किराताः ॥ 1. 6 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
 
-यस्मिन् किराताः तुषारस्त्रुतिघौतरक्तं हतव्दिपानां केसरिणां पदम् अदृष्ट्वा अपि नखरन्ध्रमुक्तैः मुक्ताफलैः मार्गं विदन्ति ।  
+यस्मिन् किराताः तुषारस्त्रुतिघौतरक्तं हतद्विपानां केसरिणां पदम् अदृष्ट्वा अपि नखरन्ध्रमुक्तैः मुक्ताफलैः मार्गं विदन्ति ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-पदमिति ॥ यस्मिन्नद्रौ किरातास्तुषारस्त्रुतिभिर्हिमनिस्यन्दैर्धैतं क्षालितं रक्तं शोणितं यस्य तत्तथोक्तम् अतो दुर्ग्रहमिति भावः । हता व्दिपा गजायैस्तेषां हतव्दिपानां केसरिणां सिंहानां पदं पादप्रक्षेपस्थानमदृष्ट्वापि नखरन्ध्रैर्नखद्रोणिभिर्मुक्तैर्मुक्ताफलैर्मार्गं विदन्ति जानान्ति । अत्र व्याधाः सिंहघातिनो गजेन्द्राश्च मुक्ताकरा इति भावः । 'करीन्द्रजीमूतवराह शङ्खमत्स्याहिशुक्त्युद्भववेणुजानि । मुक्ताफलानि प्रथितानि लोके तेषां तु शुक्त्युद्भवमेव भूरि'॥ 1. 6 ॥
+पदमिति ॥ यस्मिन्नद्रौ किरातास्तुषारस्त्रुतिभिर्हिमनिस्यन्दैर्धैतं क्षालितं रक्तं शोणितं यस्य तत्तथोक्तम् अतो दुर्ग्रहमिति भावः । हता द्विपा गजायैस्तेषां हतद्विपानां केसरिणां सिंहानां पदं पादप्रक्षेपस्थानमदृष्ट्वापि नखरन्ध्रैर्नखद्रोणिभिर्मुक्तैर्मुक्ताफलैर्मार्गं विदन्ति जानान्ति । अत्र व्याधाः सिंहघातिनो गजेन्द्राश्च मुक्ताकरा इति भावः । 'करीन्द्रजीमूतवराह शङ्खमत्स्याहिशुक्त्युद्भववेणुजानि । मुक्ताफलानि प्रथितानि लोके तेषां तु शुक्त्युद्भवमेव भूरि'॥ 1. 6 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -277,7 +277,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-कपोलेति ॥ यत्र हिमाद्रौ करिभिर्गजैः । कपोलकण्डूर्गण्डस्थलकण्डूर्विनेतुमपनेतुं विघट्टितानां घर्षितानां सरलद्रुमाणां संबन्धिस्नुतानि करिकपोलघर्षणात्क्षरितानि क्षीराणि येषां तेषां भावस्तत्ता तया हेतृना प्रसूत उत्पन्नो गन्धः सानूनि सुरभीकरोति । एतेनास्य गजाकरत्वं गम्यते, तथा च गजायुर्वेदे - हिमवव्दिन्ध्यमलया गजानां प्रभवा नगाः । इति ॥ 1. 9 ॥
+कपोलेति ॥ यत्र हिमाद्रौ करिभिर्गजैः । कपोलकण्डूर्गण्डस्थलकण्डूर्विनेतुमपनेतुं विघट्टितानां घर्षितानां सरलद्रुमाणां संबन्धिस्नुतानि करिकपोलघर्षणात्क्षरितानि क्षीराणि येषां तेषां भावस्तत्ता तया हेतृना प्रसूत उत्पन्नो गन्धः सानूनि सुरभीकरोति । एतेनास्य गजाकरत्वं गम्यते, तथा च गजायुर्वेदे - हिमवद्विन्ध्यमलया गजानां प्रभवा नगाः । इति ॥ 1. 9 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -330,7 +330,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-उव्देजयतीति ॥ यत्र हिमाद्रौ । शिलीभूतं घनीभूतं हिमं यत्र तस्मिन् । अत एवाङ्गुलीनां पार्ष्णीनां च भागान्प्रदेशानुद्वेजयत्यतिक्लेशयत्यपि मार्गे ।श्रोणयश्च पयोधराश्च श्रोणिपयोधरम् । दुर्वहेण दुधंरेण श्रोणिपयोधरेणार्ताः पीडिताः । आङ्पूवद्दिच्छतेः क्तः । 'उपसर्गादृति धातौ' इति वृध्दिः । अश्वानां मुखानीव मुखानि यासां ता अश्वमुख्यः किंनरस्त्रियः । उष्ट्रमुखवत्समासः । 'स्यात्किंनरः किंपुरुषस्तुरंगवदनो मयुः'॥ इत्यमरः । मन्दां मन्थरां गतिं न भिन्दन्ति । न त्यजन्तीत्यर्थः । पादपीडाकरेऽप्यतिभारभङ्गुरशरीरतया न शीघ्रं गन्तुं शक्यत इति भावः
+उद्वेजयतीति ॥ यत्र हिमाद्रौ । शिलीभूतं घनीभूतं हिमं यत्र तस्मिन् । अत एवाङ्गुलीनां पार्ष्णीनां च भागान्प्रदेशानुद्वेजयत्यतिक्लेशयत्यपि मार्गे ।श्रोणयश्च पयोधराश्च श्रोणिपयोधरम् । दुर्वहेण दुधंरेण श्रोणिपयोधरेणार्ताः पीडिताः । आङ्पूवद्दिच्छतेः क्तः । 'उपसर्गादृति धातौ' इति वृध्दिः । अश्वानां मुखानीव मुखानि यासां ता अश्वमुख्यः किंनरस्त्रियः । उष्ट्रमुखवत्समासः । 'स्यात्किंनरः किंपुरुषस्तुरंगवदनो मयुः'॥ इत्यमरः । मन्दां मन्थरां गतिं न भिन्दन्ति । न त्यजन्तीत्यर्थः । पादपीडाकरेऽप्यतिभारभङ्गुरशरीरतया न शीघ्रं गन्तुं शक्यत इति भावः
 </details>
 
 
@@ -397,17 +397,17 @@ title = "०१"
 <details><summary>मूलम्</summary>
 
 यत्रांशुकाक्षेपविलज्जितानां यदृच्छया किंपुरुषाङ्गनानाम् ।  
-दरीगृहव्दार विलम्बिम्बीम्बास्तिरस्करिण्यो जलदा भवन्ति ॥ 1. 14 ॥   
+दरीगृहद्वार विलम्बिम्बीम्बास्तिरस्करिण्यो जलदा भवन्ति ॥ 1. 14 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
 
-यत्र अंशुकाक्षेपविलज्जितानां किम्पुरुषाऽङ्गनानां यदृच्छया दरीगृहव्दारविलम्बिम्बिम्बा जलदाः तिरस्करिण्यो भवन्ति ।  
+यत्र अंशुकाक्षेपविलज्जितानां किम्पुरुषाऽङ्गनानां यदृच्छया दरीगृहद्वारविलम्बिम्बिम्बा जलदाः तिरस्करिण्यो भवन्ति ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-यत्रेति ॥ यत्र हिमाद्रौ । अंशुकाक्षेपेण वस्त्रापहरणेन विलज्जितानां किंपुरुषाङ्गनानां किंनरस्त्रीणां यदृच्छया दैवगत्या दरीगृरव्दारेषु विलम्बिम्बिम्बा लम्बमानमण्डला जलदास्तिरस्करिण्यो जवनिका भवन्ति । 'प्रतिसूरा जवनिका स्यात्तिरस्करिणी च सा' । इत्यमरः । 'तिरसोऽन्यतरस्याम्' इति स्त्वम् । अत्र जलदैष्वारोप्यमाणस्य तिरस्करिणीत्वस्य प्रकृतोपयोगित्वात्परिणामालङ्कारः ॥ 1. 14 ॥
+यत्रेति ॥ यत्र हिमाद्रौ । अंशुकाक्षेपेण वस्त्रापहरणेन विलज्जितानां किंपुरुषाङ्गनानां किंनरस्त्रीणां यदृच्छया दैवगत्या दरीगृरद्वारेषु विलम्बिम्बिम्बा लम्बमानमण्डला जलदास्तिरस्करिण्यो जवनिका भवन्ति । 'प्रतिसूरा जवनिका स्यात्तिरस्करिणी च सा' । इत्यमरः । 'तिरसोऽन्यतरस्याम्' इति स्त्वम् । अत्र जलदैष्वारोप्यमाणस्य तिरस्करिणीत्वस्य प्रकृतोपयोगित्वात्परिणामालङ्कारः ॥ 1. 14 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -421,17 +421,17 @@ title = "०१"
 <details><summary>मूलम्</summary>
 
 भागीरथीनिर्झरसिकराणां वोढा मुहमः कम्पितदेवदारुः ।  
-यव्दायुरन्विष्टमृगैः किरातैरासेव्यते भिन्नशिशण्डिबर्हः ॥ 1. 15 ॥   
+यद्वायुरन्विष्टमृगैः किरातैरासेव्यते भिन्नशिशण्डिबर्हः ॥ 1. 15 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
 
-भागीरथीनिर्झरसीकराणां वोढा मुहुः कम्पितदेवदारुः भिन्नशिखण्डिबर्हः यव्दायुः अन्विष्टमृगैः किरातैः आसेव्यते ।  
+भागीरथीनिर्झरसीकराणां वोढा मुहुः कम्पितदेवदारुः भिन्नशिखण्डिबर्हः यद्वायुः अन्विष्टमृगैः किरातैः आसेव्यते ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-भागीरथीति । भागीरथीनिर्झरसीकराणां गङ्गाप्रवाहपाथ:- कणानाम् । कर्मणि षष्ठो । वोढा प्रापकः । वहेस्तृच् । मुहुः पुनः पुनः सद्यो वा । 'पौनः पुन्ये भृशार्थे च सद्यो वा स्यान्मुहुः पदम्' इति वैजयन्ती । कम्पिता देवदाखो येन स तथोक्तः । भिन्नानि विश्लेषितानि शिखण्डिनां बर्हाणि गतिलाघवार्थं किरातकटिबद्धानि येन स तथोक्तः । क्रमाव्दिशेषणत्रयेण शैत्यसौरभ्यमान्द्यान्युक्तानि । यस्य हिमाद्रेर्वायुः । अन्विष्टमृगैर्मार्गितमृगैः । श्रान्तैरिति भावः । 'अन्विष्टं मागितम्' इत्यम्रः । किरातैरासेव्यते ॥ 1. 15 ॥
+भागीरथीति । भागीरथीनिर्झरसीकराणां गङ्गाप्रवाहपाथ:- कणानाम् । कर्मणि षष्ठो । वोढा प्रापकः । वहेस्तृच् । मुहुः पुनः पुनः सद्यो वा । 'पौनः पुन्ये भृशार्थे च सद्यो वा स्यान्मुहुः पदम्' इति वैजयन्ती । कम्पिता देवदाखो येन स तथोक्तः । भिन्नानि विश्लेषितानि शिखण्डिनां बर्हाणि गतिलाघवार्थं किरातकटिबद्धानि येन स तथोक्तः । क्रमाद्विशेषणत्रयेण शैत्यसौरभ्यमान्द्यान्युक्तानि । यस्य हिमाद्रेर्वायुः । अन्विष्टमृगैर्मार्गितमृगैः । श्रान्तैरिति भावः । 'अन्विष्टं मागितम्' इत्यम्रः । किरातैरासेव्यते ॥ 1. 15 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -831,7 +831,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-असंभृतमिति । अथ सा पार्वती । अङ्गयष्टेरसंभृतमयत्नसिद्धं मण्डनं प्रसाधनमनासवाख्यमासवाख्यारहितं मदस्य करणं साधनं कामस्य पुष्पव्यतिरिक्तमस्त्रमस्त्रभूतं बाल्याच्छैशव त्परमनन्तरभावि वयो यौवनं प्रपेते प्राप । यौवनेनैव हि युवतयः प्रमाध्यन्ते माद्यन्ते काम्यन्ते चेति भावः । अत्र व्दितीयपाद आसवरुपकारणाभावेऽपि तत्कार्यमदोक्तेर्विभावनालंकारः । तदुक्तम्- 'कारणाभावे कार्योत्पतिर्विभावना' इति । प्रथमतृतीययोस्त्वारोप्यमाणयोर्मण्डनमदनास्त्रत्वयोः प्रकृतोपयोगात्परिणामालंकारः । तल्लक्षणं तृक्तम् 'स्यादङ्गयष्टिर् इत्येवंविधम् आभासरुपकम् ।' ॥ 1. 31 ॥
+असंभृतमिति । अथ सा पार्वती । अङ्गयष्टेरसंभृतमयत्नसिद्धं मण्डनं प्रसाधनमनासवाख्यमासवाख्यारहितं मदस्य करणं साधनं कामस्य पुष्पव्यतिरिक्तमस्त्रमस्त्रभूतं बाल्याच्छैशव त्परमनन्तरभावि वयो यौवनं प्रपेते प्राप । यौवनेनैव हि युवतयः प्रमाध्यन्ते माद्यन्ते काम्यन्ते चेति भावः । अत्र द्वितीयपाद आसवरुपकारणाभावेऽपि तत्कार्यमदोक्तेर्विभावनालंकारः । तदुक्तम्- 'कारणाभावे कार्योत्पतिर्विभावना' इति । प्रथमतृतीययोस्त्वारोप्यमाणयोर्मण्डनमदनास्त्रत्वयोः प्रकृतोपयोगात्परिणामालंकारः । तल्लक्षणं तृक्तम् 'स्यादङ्गयष्टिर् इत्येवंविधम् आभासरुपकम् ।' ॥ 1. 31 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -980,13 +980,15 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-एतावतेति । अनिन्दिताया अनवद्यायाः पार्वत्याः काञ्चीगुणस्थानं नितम्बबिम्बमेतावता नन्वेतावतैव ॥ 'प्रश्नावधारणानुज्ञानुनया मन्त्रणे ननु' इत्यमरः । शोभत इति शोभि । आवश्यके णिनिः, ततस्तप्रत्ययः । अनुमेयं शोभित्वं शोभा यस्य तदनुमेयशोभि । 'त्वप्रत्ययस्तु गतार्थत्वान्न प्रयुक्तः' इत्याह वामनः । पश्चादादौ नौःस्पृह्येऽपि पश्चात् । तपश्चर्यानन्तरमित्यर्थः । गिरौ शेत इति गिरिशः शिवः । 'गिरौ डश्छन्दसि' इति डप्रत्ययः । भाषायामपि क्वचिदिष्यते। अथवा गिरिः कैलासोऽस्यास्तीति गिरिशः । लोमादित्वाच्छप्रत्ययः । तेन गिरिशेन । अन्यासां नारीणां कमनीयः कामयितुं शक्यो न भवतीत्यनन्यनारीकमनीयस्तमङकं निजोत्सङ्गमारोपितमधिरोपितमिति यत् । एतावता लिङ्गेनेति पूर्वेणान्वयः । रोहतेर्ण्यन्तात्कर्मणि क्तः । 'रुहः पोऽन्यतरस्याम्' इति हकारस्य पकारः । गत्यर्थविवक्षायां व्दिकर्मकत्वम् । प्रधाने कर्मणि क्तः ।गिरिजानितम्बबिम्बं विश्वातिशायिसौन्दर्यं गिरिशाङ्कारुढत्वाद्व्द्यतिरेकेण नार्यन्तरनितम्बबिम्बवत् । विपक्षे हेत्ववुक्तिरेव बाधिका । दाक्षायणीनितम्बबिम्बस्य तु पक्षसपक्षयोरन्यतरभावानतिवृत्तेर्निष्कलङ्कमनुमानमित्यलमस्थानसंरम्भेण ॥ 1. 37 ॥
+एतावतेति । अनिन्दिताया अनवद्यायाः पार्वत्याः काञ्चीगुणस्थानं नितम्बबिम्बमेतावता नन्वेतावतैव ॥ 'प्रश्नावधारणानुज्ञानुनया मन्त्रणे ननु' इत्यमरः । शोभत इति शोभि । आवश्यके णिनिः, ततस्तप्रत्ययः । अनुमेयं शोभित्वं शोभा यस्य तदनुमेयशोभि । 'त्वप्रत्ययस्तु गतार्थत्वान्न प्रयुक्तः' इत्याह वामनः । पश्चादादौ नौःस्पृह्येऽपि पश्चात् । तपश्चर्यानन्तरमित्यर्थः । गिरौ शेत इति गिरिशः शिवः । 'गिरौ डश्छन्दसि' इति डप्रत्ययः । भाषायामपि क्वचिदिष्यते। अथवा गिरिः कैलासोऽस्यास्तीति गिरिशः । लोमादित्वाच्छप्रत्ययः । तेन गिरिशेन । अन्यासां नारीणां कमनीयः कामयितुं शक्यो न भवतीत्यनन्यनारीकमनीयस्तमङकं निजोत्सङ्गमारोपितमधिरोपितमिति यत् । एतावता लिङ्गेनेति पूर्वेणान्वयः । रोहतेर्ण्यन्तात्कर्मणि क्तः । 'रुहः पोऽन्यतरस्याम्' इति हकारस्य पकारः । गत्यर्थविवक्षायां द्विकर्मकत्वम् । प्रधाने कर्मणि क्तः ।गिरिजानितम्बबिम्बं विश्वातिशायिसौन्दर्यं गिरिशाङ्कारुढत्वाद्द्व्यतिरेकेण नार्यन्तरनितम्बबिम्बवत् । विपक्षे हेत्ववुक्तिरेव बाधिका । दाक्षायणीनितम्बबिम्बस्य तु पक्षसपक्षयोरन्यतरभावानतिवृत्तेर्निष्कलङ्कमनुमानमित्यलमस्थानसंरम्भेण ॥ 1. 37 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्याः प्रविष्टा नतनाभिरन्ध्रं रराज तन्वी नवलोमराजिः ।  
-नीवीमतिक्रम्य सितेतरस्य तन्मेखलामध्यमणेरिवार्चिः ॥ 1. 38 ॥  
+तस्याः **प्रविष्टा** नत-नाभि-रन्ध्रं  
+**रराज** तन्वी **नव-लोम-राजिः** ।  
+नीवीम्+++(=वस्त्रग्रन्थिम्)+++ **अतिक्रम्य** सितेतरस्य  
+तन्-मेखला-मध्य-मणेर् इवार्चिः ॥ 1. 38 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -997,56 +999,68 @@ title = "०१"
 
 <details><summary>अन्वयः</summary>
 
-नीवीम् अतिक्रम्य नतनाभिरन्ध्रं प्रविष्टा तन्वी तस्या नवलोमराजिः सितेतरस्य तन्मेखलामध्यणेः अर्चिः इव रराज ।  
+नीवीम् अतिक्रम्य नतनाभिरन्ध्रं प्रविष्टा तन्वी  
+तस्या नवलोमराजिः  
+सितेतरस्य तन्मेखलामध्यमणेः अर्चिः इव रराज ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-तस्य इति ॥ नीवों वस्त्रग्रन्थिम् । 'स्त्रीकटीवस्त्रबन्धेऽपि नीवि परिपणेऽपि च' इत्यमरः अतिक्रम्यातीत्य वतं निम्नं नाभिरन्ध्रं प्रविष्टा प्रविशन्ती तन्वी सूक्ष्मा तस्याः पार्वत्या नवलोमराजिः सेतितरस्यासितस्य । इन्द्रनीलस्येत्यर्थः । तस्याः पार्वत्या मेखला तन्मेखला । तस्या इत्यनुवृत्तौ पुनस्तच्छब्दोपादानं वाक्यान्तरत्वात्सोढव्यम् । यव्दा तस्या नीव्या मेखला तन्मेखला तत्र तदवस्थानात् । तस्या मध्यमणेरर्चिः प्रभेव रराज । 'ज्वालाभासोर्नपुंस्यर्चि' इत्यमरः ॥ 1. 38 ॥
+तस्य इति ॥ नीवी वस्त्रग्रन्थिम् । 'स्त्रीकटीवस्त्रबन्धेऽपि नीवि परिपणेऽपि च' इत्यमरः अतिक्रम्यातीत्य वतं निम्नं नाभिरन्ध्रं प्रविष्टा प्रविशन्ती तन्वी सूक्ष्मा तस्याः पार्वत्या नवलोमराजिः सेतितरस्यासितस्य । इन्द्रनीलस्येत्यर्थः । तस्याः पार्वत्या मेखला तन्मेखला । तस्या इत्यनुवृत्तौ पुनस्तच्छब्दोपादानं वाक्यान्तरत्वात्सोढव्यम् । यद्वा तस्या नीव्या मेखला तन्मेखला तत्र तदवस्थानात् । तस्या मध्यमणेरर्चिः प्रभेव रराज । 'ज्वालाभासोर्नपुंस्यर्चि' इत्यमरः ॥ 1. 38 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-मध्येन सा वेदिविलग्नमध्या वलित्रयं चारु बभार बाला ।  
-आरोहणार्थं नवयौवनेन कामस्य सोपानमिव प्रयुतम् ॥ 1. 39 ॥  
+मध्येन सा +++(ऽऽकृत्या अन्तर्-)+++वेदि-विलग्न-मध्या  
+**वलि-त्रयं** चारु **बभार** बाला ।  
+आरोहणार्थं नव-यौवनेन  
+कामस्य सोपानम् इव प्रयुक्तम् ॥ 1. 39 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 मध्येन सा वेदिविलग्नमध्या वलित्रयं चारु बभार बाला ।  
-आरोहणार्थं नवयौवनेन कामस्य सोपानमिव प्रयुतम् ॥ 1. 39 ॥  
+आरोहणार्थं नवयौवनेन कामस्य सोपानमिव प्रयुक्तम् ॥ 1. 39 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-वेदिविलग्नमध्या सा बाला मध्येन चारु बलित्रयं कामस्य आरोहणार्थ नवयौवनेन प्रयुक्तं सोपानम् इव बभार ।  
+वेदिविलग्नमध्या सा बाला  
+मध्येन चारु वलित्रयं  
+कामस्य आरोहणार्थं  
+नवयौवनेन प्रयुक्तं सोपानम् इव बभार ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-मध्येनेति ॥ 'वेदिः परिष्कृता भूमिः'इत्यमरः । वेदिविलग्नमध्या वेदिवत्कृशमध्या । तनुमध्येति यावत् । सा बाला पार्वती । मध्येन मध्यभागेन चारु सुन्दरं वलित्रयं कामस्यारोहणार्थं नवयौवनेन प्रयुक्तं रचितं सोपानमिव बभारेत्युत्प्रेक्षा ॥ 1. 39 ॥
+मध्येनेति ॥ 'वेदिः परिष्कृता भूमिः'इत्यमरः । **वेदिविलग्नमध्या** वेदिवत्-कृशमध्या । तनुमध्येति यावत् । सा बाला पार्वती । मध्येन मध्यभागेन चारु सुन्दरं वलित्रयं कामस्यारोहणार्थं नवयौवनेन प्रयुक्तं रचितं सोपानमिव बभारेत्युत्प्रेक्षा ॥ 1. 39 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अन्योन्यमुत्पीडयदुत्पलाक्ष्याः स्तनव्दयं पाण्डु तथा प्रवृद्धम् ।  
-मध्यं यथा श्याममुखस्य तस्य मृणालसूत्रान्तरमप्यलभ्यम् ॥ 1.40 ॥   
+अन्योन्यम् उत्पीडयद् उत्पलाक्ष्याः  
+**स्तन-द्वयं** पाण्डु तथा **प्रवृद्धम्** ।  
+मध्यं यथा श्याम-मुखस्य तस्य  
+मृणाल-सूत्रान्तरम् अप्य् अलभ्यम् ॥ 1.40 ॥+++(5)+++   
 </details>
 
 <details><summary>मूलम्</summary>
 
-अन्योन्यमुत्पीडयदुत्पलाक्ष्याः स्तनव्दयं पाण्डु तथा प्रवृद्धम् ।  
+अन्योन्यमुत्पीडयदुत्पलाक्ष्याः स्तनद्वयं पाण्डु तथा प्रवृद्धम् ।  
 मध्यं यथा श्याममुखस्य तस्य मृणालसूत्रान्तरमप्यलभ्यम् ॥ 1.40 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
 
-अन्योन्यम् उत्पीडयत् पाणडु उत्पलाक्ष्याः स्तनव्दयं तथा प्रवृद्धं, श्याममुखस्य तस्य मध्ये यथा मृणालसूत्रान्तरम् अपि अलभ्यम् ।  
+अन्योन्यम् उत्पीडयत् पाणडु उत्पलाक्ष्याः स्तनद्वयं  
+तथा प्रवृद्धं,  
+श्याममुखस्य तस्य मध्ये  
+यथा मृणालसूत्रान्तरम् अपि अलभ्यम् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-अन्योन्येति । अन्योन्यं परस्परम् । 'कर्मव्यतिहारे सर्वनाम्ना व्दे वाच्ये' इति व्दिरुक्तिः । 'समासवच्च बहुलम्' इति बहुलवचनादसमासपक्षेऽपि पूर्वपदस्थस्य सुपः सुर्वक्तव्यः । उत्पीडयदुपरुन्धत्पाण्डु गौरमुत्पलाक्ष्याः स्तनव्दयं तथा तेन प्रकारेण प्रवृद्धम् । कर्तरि क्तः । श्याममुखस्य कृष्णच्चुकस्येति क्वरुपवर्णनं तस्य स्तनव्दयस्य मध्ये यथा येन प्रकारेण मृणालसूत्रान्तरं बिसतन्तुमात्रावकाशोऽप्यलभ्यं लब्धुमशक्यम् । 'अन्तरमवकाशावधिपरिधानान्तर्धिभेदतादर्थ्ये' इत्यमरः । अत्र संबन्धेऽसंबन्धरुपातिशयोक्त्यलंकारः । कुचयोः पीवरत्वातिशयार्थमवकाशसंबन्धऽप्यसंबन्धाभिधानादिति ॥ 1. 40॥
+अन्योन्येति । अन्योन्यं परस्परम् । 'कर्मव्यतिहारे सर्वनाम्ना द्वे वाच्ये' इति द्विरुक्तिः । 'समासवच्च बहुलम्' इति बहुलवचनादसमासपक्षेऽपि पूर्वपदस्थस्य सुपः सुर्वक्तव्यः । उत्पीडयदुपरुन्धत्पाण्डु गौरमुत्पलाक्ष्याः स्तनद्वयं तथा तेन प्रकारेण प्रवृद्धम् । कर्तरि क्तः । श्याममुखस्य कृष्णच्चुकस्येति क्वरुपवर्णनं तस्य स्तनद्वयस्य मध्ये यथा येन प्रकारेण मृणालसूत्रान्तरं बिसतन्तुमात्रावकाशोऽप्यलभ्यं लब्धुमशक्यम् । 'अन्तरमवकाशावधिपरिधानान्तर्धिभेदतादर्थ्ये' इत्यमरः । अत्र संबन्धेऽसंबन्धरुपातिशयोक्त्यलंकारः । कुचयोः पीवरत्वातिशयार्थमवकाशसंबन्धऽप्यसंबन्धाभिधानादिति ॥ 1. 40॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1076,13 +1090,13 @@ title = "०१"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कण्ठस्य तस्याः स्तनबन्धुरस्य मुक्ताकलापस्य च निस्तलस्य ।  
-अन्योन्यशोभाजननाव्दभूव साधारणो भूषणभूष्यभावः ॥ 1. 42 ॥   
+अन्योन्यशोभाजननाद्वभूव साधारणो भूषणभूष्यभावः ॥ 1. 42 ॥   
 </details>
 
 <details><summary>मूलम्</summary>
 
 कण्ठस्य तस्याः स्तनबन्धुरस्य मुक्ताकलापस्य च निस्तलस्य ।  
-अन्योन्यशोभाजननाव्दभूव साधारणो भूषणभूष्यभावः ॥ 1. 42 ॥   
+अन्योन्यशोभाजननाद्वभूव साधारणो भूषणभूष्यभावः ॥ 1. 42 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -1092,36 +1106,36 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-कण्ठस्येति ॥ स्तनाभ्यां बन्धुरस्योन्नतस्य तस्याः पार्वत्याः कण्ठस्य गलस्य निस्तलस्य वर्तुलस्य मुक्ताकलापस्य मुक्ताभूषणस्य च । 'वर्तुलं निस्तलं बृत्तं बन्धुरं तून्नतानतम्' । 'कलापो भूषणे बर्हे तूणीरे संहतावपि' इति चामरः । अन्योन्यशोभाजननाद् भूषणभूष्यभावोऽलंकारालंकार्यभावः साधारणः समानो बभूव । उभावप्यन्योन्यस्य भूष्यौ भूषणे च बभूवतुरित्यर्थः । अत्र कण्ठमुक्ताकलापयोः सोभक्रियाव्दारेणान्योन्यभूषाजनकत्वादन्योत्यालंकारः । तदुक्तम्- 'परस्परं क्रियाजननमन्योन्यम्'इति ॥ 1. 42 ॥
+कण्ठस्येति ॥ स्तनाभ्यां बन्धुरस्योन्नतस्य तस्याः पार्वत्याः कण्ठस्य गलस्य निस्तलस्य वर्तुलस्य मुक्ताकलापस्य मुक्ताभूषणस्य च । 'वर्तुलं निस्तलं बृत्तं बन्धुरं तून्नतानतम्' । 'कलापो भूषणे बर्हे तूणीरे संहतावपि' इति चामरः । अन्योन्यशोभाजननाद् भूषणभूष्यभावोऽलंकारालंकार्यभावः साधारणः समानो बभूव । उभावप्यन्योन्यस्य भूष्यौ भूषणे च बभूवतुरित्यर्थः । अत्र कण्ठमुक्ताकलापयोः सोभक्रियाद्वारेणान्योन्यभूषाजनकत्वादन्योत्यालंकारः । तदुक्तम्- 'परस्परं क्रियाजननमन्योन्यम्'इति ॥ 1. 42 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इदानीं पार्वतीवदनं चन्द्रकमलसदृशमित्येतदेव वाचोभङ्ग्याह-  
 चन्द्रं गता पद्मगुणान्न भुङ्क्ते पद्माश्रिता चान्द्रमसीमभिख्याम् ।  
-उमामुखं तु प्रतिपद्य लोला व्दिसंश्रयां प्रीतिमवाप लक्ष्मीः ॥ 1. 43 ॥   
+उमामुखं तु प्रतिपद्य लोला द्विसंश्रयां प्रीतिमवाप लक्ष्मीः ॥ 1. 43 ॥   
 </details>
 
 <details><summary>मूलम्</summary>
 
 इदानीं पार्वतीवदनं चन्द्रकमलसदृशमित्येतदेव वाचोभङ्ग्याह-  
 चन्द्रं गता पद्मगुणान्न भुङ्क्ते पद्माश्रिता चान्द्रमसीमभिख्याम् ।  
-उमामुखं तु प्रतिपद्य लोला व्दिसंश्रयां प्रीतिमवाप लक्ष्मीः ॥ 1. 43 ॥   
+उमामुखं तु प्रतिपद्य लोला द्विसंश्रयां प्रीतिमवाप लक्ष्मीः ॥ 1. 43 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
 
-लोला लक्ष्मीः चन्द्रं गता (सती) पद्मगुणान् न भुङ्त्ते, पद्माश्रिता (सती) चान्द्रमसीम् अभिख्यां न भुङ्क्ते, उमामुखं तु प्रतिपद्य व्दिसंश्रयां प्रीतिम् अवाप ।  
+लोला लक्ष्मीः चन्द्रं गता (सती) पद्मगुणान् न भुङ्त्ते, पद्माश्रिता (सती) चान्द्रमसीम् अभिख्यां न भुङ्क्ते, उमामुखं तु प्रतिपद्य द्विसंश्रयां प्रीतिम् अवाप ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-चन्द्रमिति ॥ लोला चपला । परिभ्रमणशीलेत्यर्थः । लक्ष्मीः कान्त्यभिमानिनी देवता चन्द्रं गता प्रात्पा सती पद्मगुणान्सौगन्ध्यादीन्न भुङ्क्ते नानुभवति । पद्माश्रिता सती चन्द्रमस इमां चान्द्रमसीमभिख्यां शोभाम् । 'अभिख्या नामशोभयोः' इत्यमरः । अमृतवदानन्दिनीं न भुङ्क्ते । उमामुखं प्रतिपद्य तु व्दे चन्द्रपद्मे संश्रयः कारणं यस्यास्तां व्दिसंश्रयां प्रीतिमानन्दमवाप । तत्रोभयगुणसंभवादिति भावः । अत्रोपमानभुतचन्द्रपद्मापेक्षयोपमेयस्योमामुखस्याधिकगुणवत्त्वोक्त्या व्यतिरेकालंकारः । तदुक्तम्- 'भेदप्राधान्येनोपमानादुपमेयस्याधिक्ये विपर्यये वा व्यतिरेकः' इति ॥ 1. 43 ॥
+चन्द्रमिति ॥ लोला चपला । परिभ्रमणशीलेत्यर्थः । लक्ष्मीः कान्त्यभिमानिनी देवता चन्द्रं गता प्रात्पा सती पद्मगुणान्सौगन्ध्यादीन्न भुङ्क्ते नानुभवति । पद्माश्रिता सती चन्द्रमस इमां चान्द्रमसीमभिख्यां शोभाम् । 'अभिख्या नामशोभयोः' इत्यमरः । अमृतवदानन्दिनीं न भुङ्क्ते । उमामुखं प्रतिपद्य तु द्वे चन्द्रपद्मे संश्रयः कारणं यस्यास्तां द्विसंश्रयां प्रीतिमानन्दमवाप । तत्रोभयगुणसंभवादिति भावः । अत्रोपमानभुतचन्द्रपद्मापेक्षयोपमेयस्योमामुखस्याधिकगुणवत्त्वोक्त्या व्यतिरेकालंकारः । तदुक्तम्- 'भेदप्राधान्येनोपमानादुपमेयस्याधिक्ये विपर्यये वा व्यतिरेकः' इति ॥ 1. 43 ॥
 </details>
 
 पुष्पं प्रवालोपहितं यदि स्यान्मुक्ताफलं वा स्फुटविद्रुमस्थम् ।  
 
-ततोऽनुकुर्याव्दिशदस्य तस्या स्ताम्रौष्ठपर्यस्तरुचः स्मितस्य ॥ 1. 44 ॥  
+ततोऽनुकुर्याद्विशदस्य तस्या स्ताम्रौष्ठपर्यस्तरुचः स्मितस्य ॥ 1. 44 ॥  
 
 <details><summary>अन्वयः</summary>
 
@@ -1220,7 +1234,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- लज्जेति । तिरश्चां तिर्यग्जातीनां चेतसि लज्जा स्याद्यदि । संशयाभावोऽसंशयम् । सन्देहो नास्तीत्यर्थः । पर्वतराजपुत्र्याः । 'शार्ङ्गरतवाद्यञो ङीन्'इति ङीन् । तं प्रसिद्धं केशपाशं केशकलापम् । 'पाशः पक्षश्च हस्तश्च कलापार्थाः कचात्परे' इत्यमरः । प्रसमीक्ष्य दृष्ट्वा चमर्यो मृगीविशेषाः बालाः प्रिया यासामिति विग्रहे बालप्रियास्तासां भावो बालप्रियत्वम् । प्रियबालत्वमित्यर्थः । आहिताग्न्यादिपाठाव्दा परनिपातः । 'त्वतलोर्गुणवचनस्य' इति पुंबद्भावः । शिथिलं कुर्यः । निर्लज्जत्वान्न शिथिलयन्तीत्यर्थः । अत एवात्र निर्लज्जत्वकरणहेतोराद्यपादे वाक्यार्थत्वेनोक्त्या काव्यलिङ्गाख्योऽलङ्कारः । तदुक्तम्-- 'हेतोर्वाक्यपदार्थत्वे काव्यलिङ्गमुदाहृतम्' इति ॥ 1. 48 ॥
+- लज्जेति । तिरश्चां तिर्यग्जातीनां चेतसि लज्जा स्याद्यदि । संशयाभावोऽसंशयम् । सन्देहो नास्तीत्यर्थः । पर्वतराजपुत्र्याः । 'शार्ङ्गरतवाद्यञो ङीन्'इति ङीन् । तं प्रसिद्धं केशपाशं केशकलापम् । 'पाशः पक्षश्च हस्तश्च कलापार्थाः कचात्परे' इत्यमरः । प्रसमीक्ष्य दृष्ट्वा चमर्यो मृगीविशेषाः बालाः प्रिया यासामिति विग्रहे बालप्रियास्तासां भावो बालप्रियत्वम् । प्रियबालत्वमित्यर्थः । आहिताग्न्यादिपाठाद्वा परनिपातः । 'त्वतलोर्गुणवचनस्य' इति पुंबद्भावः । शिथिलं कुर्यः । निर्लज्जत्वान्न शिथिलयन्तीत्यर्थः । अत एवात्र निर्लज्जत्वकरणहेतोराद्यपादे वाक्यार्थत्वेनोक्त्या काव्यलिङ्गाख्योऽलङ्कारः । तदुक्तम्-- 'हेतोर्वाक्यपदार्थत्वे काव्यलिङ्गमुदाहृतम्' इति ॥ 1. 48 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1242,7 +1256,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
--सर्वोपमेति । किंबहुना सा पार्वती विश्वसृजा विधात्रैकत्र तिष्ठतीत्येक्स्थं तस्य सौन्दर्यंस्य । सर्ववस्तुगतस्येत्यर्थः । दिदृक्षयेव प्रयत्नाद्यथाप्रदेशं क्रमाव्दिनिवेशितेन स्थापितेन सर्वेषामुपमाद्रव्याणां चन्द्रारविन्दाद्युपमानवस्तूनां समुच्चयेन समाहारेण निर्मिता । दिदृक्षयेवेति फलोत्प्रेक्षा दर्शनार्थित्वाव्दिश्वसृज इति ॥ 1. 49 ॥
+-सर्वोपमेति । किंबहुना सा पार्वती विश्वसृजा विधात्रैकत्र तिष्ठतीत्येक्स्थं तस्य सौन्दर्यंस्य । सर्ववस्तुगतस्येत्यर्थः । दिदृक्षयेव प्रयत्नाद्यथाप्रदेशं क्रमाद्विनिवेशितेन स्थापितेन सर्वेषामुपमाद्रव्याणां चन्द्रारविन्दाद्युपमानवस्तूनां समुच्चयेन समाहारेण निर्मिता । दिदृक्षयेवेति फलोत्प्रेक्षा दर्शनार्थित्वाद्विश्वसृज इति ॥ 1. 49 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1264,7 +1278,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- तामिति । कामेनेच्छया चरतीति कामचरो नारदः । कदाचित्पितुर्हिमवतः समीपे कन्यां तां पार्वतीं प्रेक्ष्य किल प्रेम्णा न त्वन्यथा हरस्य शिवस्यार्ध हरतीत्यर्धहरा । 'हरतेरनुद्यमनेऽच्' हत्यच्प्रत्ययः । शरीरास्यार्धहराम् शरीरार्धहराम् । कुलधुरन्धरादिवदवयवव्दारा समुदायविशेषकत्वात्समासः । अन्यथा त्वर्धस्य समप्रविभागावचनत्वादशरीरेति स्यात् । एकवधूमसपत्नीकां भार्याम् । 'पूर्वकाल--' इत्यादिना समासः । भवित्रीं भाविनीं समादिदेश । हरस्यार्धाङ्गहारिण्येकपत्नी भविष्यतीत्यादिष्टवावित्यर्थः ॥ 1. 50 ॥
+- तामिति । कामेनेच्छया चरतीति कामचरो नारदः । कदाचित्पितुर्हिमवतः समीपे कन्यां तां पार्वतीं प्रेक्ष्य किल प्रेम्णा न त्वन्यथा हरस्य शिवस्यार्ध हरतीत्यर्धहरा । 'हरतेरनुद्यमनेऽच्' हत्यच्प्रत्ययः । शरीरास्यार्धहराम् शरीरार्धहराम् । कुलधुरन्धरादिवदवयवद्वारा समुदायविशेषकत्वात्समासः । अन्यथा त्वर्धस्य समप्रविभागावचनत्वादशरीरेति स्यात् । एकवधूमसपत्नीकां भार्याम् । 'पूर्वकाल--' इत्यादिना समासः । भवित्रीं भाविनीं समादिदेश । हरस्यार्धाङ्गहारिण्येकपत्नी भविष्यतीत्यादिष्टवावित्यर्थः ॥ 1. 50 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1378,7 +1392,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- गणा इति ॥ गणाः प्रमथगणाः । 'गणाः प्रमथसंख्यौधाः' इति वैजयन्ती । नमेरुप्रसवावतंसाः सुरपुंनागकुसुमशेखराः । 'नमेरुः सुरपुंनागः' इति विश्वः । स्पर्शवतीः सुखस्पर्शाः । मृव्दीरित्यर्थः । प्रशंसायां मतुप् । भूर्जत्वचो भूर्जवल्कलानि दधानाः । वसाना इत्यर्थः । मनःशिलाभिर्धातुविशेषैर्विच्छुरिता अनूलित्पाश्च सन्तः । शिलायां भवं शैलेयम् । गन्धौषधिविशेषः । शिलायाः 'स्त्रीभ्यो ढक्' इति भवार्थे ढक् । 'शिलाजतु च सैलेयम्' इति यादवः । तेन नद्धेषु व्याप्तेषु शिलातलेषु निषेदुः ।उपविविशुरित्यर्थः ॥ 1. 55 ॥
+- गणा इति ॥ गणाः प्रमथगणाः । 'गणाः प्रमथसंख्यौधाः' इति वैजयन्ती । नमेरुप्रसवावतंसाः सुरपुंनागकुसुमशेखराः । 'नमेरुः सुरपुंनागः' इति विश्वः । स्पर्शवतीः सुखस्पर्शाः । मृद्वीरित्यर्थः । प्रशंसायां मतुप् । भूर्जत्वचो भूर्जवल्कलानि दधानाः । वसाना इत्यर्थः । मनःशिलाभिर्धातुविशेषैर्विच्छुरिता अनूलित्पाश्च सन्तः । शिलायां भवं शैलेयम् । गन्धौषधिविशेषः । शिलायाः 'स्त्रीभ्यो ढक्' इति भवार्थे ढक् । 'शिलाजतु च सैलेयम्' इति यादवः । तेन नद्धेषु व्याप्तेषु शिलातलेषु निषेदुः ।उपविविशुरित्यर्थः ॥ 1. 55 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1400,7 +1414,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-तुषारेति । तुषारसंघाता हिमघनास्त एव शिलास्ताः खुराग्रैः समुल्लिखन्विदारयन्दर्पेण कलो मधुरध्वनिर्यस्य स दर्पकलो विविग्नैर्मेतैर्गवयैर्गोसदृशमृगविशेषैः कथंचित्कृच्छ्रेण दृष्टः । ककुदमस्यास्तीति ककुद्मान्वृषभोऽसोढः सिंहानां ध्वनिर्येंन स सिंहध्वनिमसहमानः सन् । उन्ननादोच्चैर्ननाद । जगर्जेत्यर्थः । स्वभावोक्तिरलङ्कारः । तदुक्तम्-- स्वभावोक्तिरसौ चारु यथावव्दस्तुवर्णन्म् इति ॥ 1. 56 ॥
+तुषारेति । तुषारसंघाता हिमघनास्त एव शिलास्ताः खुराग्रैः समुल्लिखन्विदारयन्दर्पेण कलो मधुरध्वनिर्यस्य स दर्पकलो विविग्नैर्मेतैर्गवयैर्गोसदृशमृगविशेषैः कथंचित्कृच्छ्रेण दृष्टः । ककुदमस्यास्तीति ककुद्मान्वृषभोऽसोढः सिंहानां ध्वनिर्येंन स सिंहध्वनिमसहमानः सन् । उन्ननादोच्चैर्ननाद । जगर्जेत्यर्थः । स्वभावोक्तिरलङ्कारः । तदुक्तम्-- स्वभावोक्तिरसौ चारु यथावद्वस्तुवर्णन्म् इति ॥ 1. 56 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1466,7 +1480,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-प्रत्यर्थिति । गिरीशः शिवः समाधेः प्रत्यर्थिभूतां प्रतिपक्षभूतामपि । सुप्सुपेति समासः । श्रोतुमिच्छन्तीं शुश्रूषमाणां सेवमानाम् । सेवका हि सेव्ये दत्तकर्णा भवन्ति । इच्छार्थे सन्प्रत्ययः ।'ज्ञाश्रुस्मृदृशां सनः' इत्यात्मनेपदम् । तां पार्वतीमनुमेनेऽङ्गीचकार । न प्रतिषिद्धवानित्यभिप्रायः । न चैतावता धीरस्य कश्चिव्दिकार इत्याशयः । धीरत्वमेवार्थान्तरन्यासेनाह- विकारेति । विकारस्य प्रकृतेरन्यथात्वस्य हेतौ स्त्रीसंनिधानादिकारणे सति विद्यमानेऽपि येषां चेतांसि न विक्रयन्ते न विकृर्ति नीयन्ते त एव धीराः । 'विक्रियन्ते' इति कर्मणि लट् ॥ 1. 59 ॥
+प्रत्यर्थिति । गिरीशः शिवः समाधेः प्रत्यर्थिभूतां प्रतिपक्षभूतामपि । सुप्सुपेति समासः । श्रोतुमिच्छन्तीं शुश्रूषमाणां सेवमानाम् । सेवका हि सेव्ये दत्तकर्णा भवन्ति । इच्छार्थे सन्प्रत्ययः ।'ज्ञाश्रुस्मृदृशां सनः' इत्यात्मनेपदम् । तां पार्वतीमनुमेनेऽङ्गीचकार । न प्रतिषिद्धवानित्यभिप्रायः । न चैतावता धीरस्य कश्चिद्विकार इत्याशयः । धीरत्वमेवार्थान्तरन्यासेनाह- विकारेति । विकारस्य प्रकृतेरन्यथात्वस्य हेतौ स्त्रीसंनिधानादिकारणे सति विद्यमानेऽपि येषां चेतांसि न विक्रयन्ते न विकृर्ति नीयन्ते त एव धीराः । 'विक्रियन्ते' इति कर्मणि लट् ॥ 1. 59 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
