--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
@@ -75,14 +75,14 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स्तुतिप्रकारमाह 'नमः' इत्यादिभिर्व्दादशभिः श्लेकैः -  
+स्तुतिप्रकारमाह 'नमः' इत्यादिभिर्द्वादशभिः श्लेकैः -  
 नमस्त्रिमुर्तये तुभ्यं प्राक्सृष्टेः केवलात्मने ।  
 गुणत्रयविभागाय पश्चाद्भेदमुपेयुषे ॥ 2.4 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-स्तुतिप्रकारमाह 'नमः' इत्यादिभिर्व्दादशभिः श्लेकैः -  
+स्तुतिप्रकारमाह 'नमः' इत्यादिभिर्द्वादशभिः श्लेकैः -  
 नमस्त्रिमुर्तये तुभ्यं प्राक्सृष्टेः केवलात्मने ।  
 गुणत्रयविभागाय पश्चाद्भेदमुपेयुषे ॥ 2.4 ॥  
 </details>
@@ -116,7 +116,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-यदिति ॥ न जायत इत्यजः । हे अज, अपां जलानामन्तस्त्वया यदमोघमवन्ध्यं बीजं वीर्यमुप्तं निक्षिप्तं । 'मुक्तम्' इति पाठे विसृष्टमित्यर्थः । 'शुक्रं तेजोरेतसी च बीजवीर्येन्द्रियाणि च' इत्यमरः । अतस्ते बीजाच्चराचरं स्थावरजङ्गमात्मकम् । समाहारे व्दन्व्दैकवद्भावः । विश्वं जगत् । उत्पन्नमिति शेषः । तस्य विश्वस्य । प्रभवत्यस्मादिति प्रभवः कारणं गीयसे । 'अदश्चराचरं विश्वं प्रसवस्तस्त गीयते' इति पाठे अद इदं चराचरं विश्वं तस्य बीजस्य प्रसवो गीयते । लोक इति शेषः । अत्र मनुः- अप एव  ससर्जादौ तासु बीजमवासृजत् । तदण्डमभवद्धैमं सहस्त्रांशुसमप्रभम् ॥ इति ॥ 2.5. ॥  
+यदिति ॥ न जायत इत्यजः । हे अज, अपां जलानामन्तस्त्वया यदमोघमवन्ध्यं बीजं वीर्यमुप्तं निक्षिप्तं । 'मुक्तम्' इति पाठे विसृष्टमित्यर्थः । 'शुक्रं तेजोरेतसी च बीजवीर्येन्द्रियाणि च' इत्यमरः । अतस्ते बीजाच्चराचरं स्थावरजङ्गमात्मकम् । समाहारे द्वन्द्वैकवद्भावः । विश्वं जगत् । उत्पन्नमिति शेषः । तस्य विश्वस्य । प्रभवत्यस्मादिति प्रभवः कारणं गीयसे । 'अदश्चराचरं विश्वं प्रसवस्तस्त गीयते' इति पाठे अद इदं चराचरं विश्वं तस्य बीजस्य प्रसवो गीयते । लोक इति शेषः । अत्र मनुः- अप एव  ससर्जादौ तासु बीजमवासृजत् । तदण्डमभवद्धैमं सहस्त्रांशुसमप्रभम् ॥ इति ॥ 2.5. ॥  
 </details>
 
 
@@ -163,7 +163,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-स्त्रीपुंसाविति ॥ स्त्री च पुमाश्च स्त्रीपुंसौ । 'अचतुर-' इत्यादिनाच्प्रत्ययान्तो निपातः । सिसृक्षया स्त्रष्टुमिच्छया भिन्नमूर्तेर्व्दिधाकृतविग्रहस्य तेतवात्मनो देहस्य भागावात्मभगौ । 'आत्मा जावे धृतौ देहे स्वभावे परमात्मानि' इति विश्वः । तावेव भागौ प्रसूतिभाज उत्पत्तिभाजः । सृज्यत इति सर्गस्तस्य । निजसृष्टेरित्यर्थः । माता च पिता च पितरौ । 'पिता' 'मात्रा' इत्येकशेषः । स्मृतौ । वृद्धैरिति शेषः । अत्र मनु- 'व्दिधा कृत्वात्मनो देहमर्धेन पुरुषोऽभवत् । अर्धेन नारो तस्यां स विराजमसृजत्प्रभुः ॥' इति ॥ 2.7 ॥
+स्त्रीपुंसाविति ॥ स्त्री च पुमाश्च स्त्रीपुंसौ । 'अचतुर-' इत्यादिनाच्प्रत्ययान्तो निपातः । सिसृक्षया स्त्रष्टुमिच्छया भिन्नमूर्तेर्द्विधाकृतविग्रहस्य तेतवात्मनो देहस्य भागावात्मभगौ । 'आत्मा जावे धृतौ देहे स्वभावे परमात्मानि' इति विश्वः । तावेव भागौ प्रसूतिभाज उत्पत्तिभाजः । सृज्यत इति सर्गस्तस्य । निजसृष्टेरित्यर्थः । माता च पिता च पितरौ । 'पिता' 'मात्रा' इत्येकशेषः । स्मृतौ । वृद्धैरिति शेषः । अत्र मनु- 'द्विधा कृत्वात्मनो देहमर्धेन पुरुषोऽभवत् । अर्धेन नारो तस्यां स विराजमसृजत्प्रभुः ॥' इति ॥ 2.7 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
